--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="bg-slate-400">
     <div id="root"></div>
+    <script src="https://cdn.tiny.cloud/1/2d3sre9ere47sv36vdte4f1vi4t7hekargla1q31dls3bc27/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
